fix scrollbar behaviour in IE7
git-svn-id: file:///home/awy/mirror/slim/trunk/server@14988 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -980,6 +980,7 @@ form#advSearchForm.resultsPage {
 
 /* settings pages */
 body.settings {
+	position: relative;
 	overflow: auto;
 }
 
